--- a/tags-formulario.html
+++ b/tags-formulario.html
@@ -11,5 +11,11 @@
     <p>Um label e um input aqui:</p>
     <p>E um botão para terminar.</p>
 
+    <form>
+        <label for="nome">Nome:</label>
+        <input type="text "id="nome" name="nome" required>
+        <button type="submit">Enviar</button>
+    </form>
+
 </body>
 </html>
